--- a/ball/ball.html
+++ b/ball/ball.html
@@ -12,7 +12,7 @@
         <img src="field.jpg" id="field">
     </div>
     <div class="text">
-        Натисніть на будь-яку ділянку поля, щоб перемістити м'яч на задану точку.
+        Натисніть на будь-яку ділянку поля, щоб перемістити м'яч на задану точку
     </div>
     <script src="dom.js"></script>
 </body>
